--- a/index.html
+++ b/index.html
@@ -11,44 +11,49 @@
 <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="header_welcome">
+        
+        <img src="img/logo.svg" class="logo">
       <nav>
         <li> <a href="exhibitions.html">exhibitions</a></li>
         <li><a href="work.html"></a>get involved</a></li>
         <li><a href="visit.html"></a>visit us</a></li>
         <li><a href="index.html"></a>home</a></li>
       </nav>
-      <img src="img/blob.svg" class="hero_img">
+      
+    </header>
+    <section class="hero">
+    <img src="img/hero_blob.svg" class="hero_img">
       <h1>Welcome</h1>
       <p>to the Community Science Museum of Oslo</p>
-    </header>
+    </section>
     <section class="welcome_content">
       <div class="blob_exh_01">
-        <img src="img/blob.svg">
+        <img src="img/blob.svg" alt="blob" class="image_01">
         <h2>Explore the cosmos</h2>
         <p>‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar system.
         </p>
       </div>
       <div class="blob_exh_02">
-        <img src="img/blob.svg">
-        <h2>The Origins</h2>
+        <img src="img/blob.svg" alt="blob" class="image">
+       <div class="text"> <h2>The Origins</h2>
         <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
-        </p>
+        </p></div>
       </div>
       <div class="blob_visit">
-        <img src="img/blob.svg">
+        <img src="img/blob.svg" alt="blob" class="image">
         <h2>The Origins</h2>
         <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
         </p>
       </div>
       <div class="blob_work">
-        <img src="img/blob.svg">
+        <img src="img/blob.svg" alt="blob" class="image">
         <h2>The Origins</h2>
         <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
         </p>
       </div>
       <div class="blob_volunteer">
-        <img src="img/blob.svg">
+        <img src="img/blob.svg" alt="blob" class="image">
         <h2>The Origins</h2>
         <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
         </p>
