--- a/exhibitions.html
+++ b/exhibitions.html
@@ -5,68 +5,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="exhibitions" content="width=device-width, initial-scale=1.0" />
     <title>Community Science Museum - Our exhibitions</title>
-    <link rel="stylesheet" href="stylesheet.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header_welcome">
-        <img src="img/hero_blob.png" class="hero_img">
-        <img src="img/logo.svg" class="logo">
+      <img src="img/hero_blob.png" class="hero_img" />
+      <img src="img/logo.svg" class="logo" />
       <nav>
-        <li> <a href="exhibitions.html">exhibitions</a></li>
-        <li><a href="work.html"></a>get involved</a></li>
-        <li><a href="visit.html"></a>visit us</a></li>
-        <li><a href="index.html"></a>home</a></li>
+        <li><a href="exhibitions.html">exhibitions</a></li>
+        <li><a href="work.html">get involved</a></li>
+        <li><a href="visit.html">visit us</a></li>
+        <li><a href="index.html">home</a></li>
       </nav>
-      
     </header>
     <section class="hero">
-    
-      <h1>Welcome</h1>
+      <h1>Exhibitions</h1>
       <p>to the Community Science Museum of Oslo</p>
     </section>
     <section class="welcome_content">
-      <div class="blob_exh_01">
-        <img src="img/astronaut.png" alt="astronaut" class="image">
+      <div class="exhibition_cosmos">
+        <img src="img/astronaut_lowres.png" alt="astronaut" class="image" />
         <h2>Explore the cosmos</h2>
-        <p>‘The Sky Above Us’, explores the night sky and what we can see and know about the universe around us. Follow the journey of our solar exploration: from early Arab traders, to Galileo’s telescope, to the latest exploration of the planets in our solar system.
+        <p>
+          ‘The Sky Above Us’, explores the night sky and what we can see and
+          know about the universe around us. Follow the journey of our solar
+          exploration: from early Arab traders, to Galileo’s telescope, to the
+          latest exploration of the planets in our solar system.
         </p>
       </div>
-      <div class="blob_exh_02">
-        <img src="img/astronaut.png" alt="blob" class="image">
-       <div class="text"> <h2>The Origins</h2>
-        <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
-        </p></div>
+      <div class="exhibition_origins">
+        <img src="img/origins_lowres.png" alt="blob" class="image" />
+        <div class="text">
+          <h2>The Origins</h2>
+          <p>
+            For centuries, philosophers and scientists have wrestled with the
+            question of our origins. Where do we come from and how did we get
+            here?
+          </p>
+        </div>
       </div>
-      <div class="blob_exh_02">
-        <img src="img/astronaut.png" alt="blob" class="image">
-        <h2>The Origins</h2>
-        <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
+      <div class="exhibition_micro">
+        <img src="img/micro_organism_lowres.png" alt="blob" class="image" />
+        <h2>From micro-organisms to the human body</h2>
+        <p>
+          Many of our great medicinal discoveries have come not only from the
+          lab, but also from observing animals in the wild. Often our fellow
+          creatures have beat us to it.
         </p>
       </div>
-      <div class="blob_exh_02">
-        <img src="img/astronaut.png" alt="blob" class="image">
-        <h2>The Origins</h2>
-        <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
-        </p>
-      </div>
-      <div class="blob_exh_02">
-        <img src="img/astronaut.png" alt="blob" class="image">
-        <h2>The Origins</h2>
-        <p> For centuries, philosophers and scientists have wrestled with the question of our origins. Where do we come from and how did we get here?
+      <div class="exhibition_future">
+        <img src="img/the_future_lowres.png" alt="blob" class="image" />
+        <h2>The future is here</h2>
+        <p>
+          The information revolution is here and robotics and artificial
+          intelligence are the science of the future. From useful home
+          applications of AI to industrial uses of robotics, the future is here.
         </p>
       </div>
     </section>
 
     <footer>
-        <nav>
-            <li>Contact</li>
-            <li>Contact</li>
-            <li>Contact</li>
-            <li>Contact</li>
-        </nav>
+      <nav>
+        <li>Contact</li>
+        <li>Contact</li>
+        <li>Contact</li>
+        <li>Contact</li>
+      </nav>
     </footer>
-</body>
+  </body>
 </html>
