--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header_welcome">
-      <img src="img/logo.svg" class="logo" />
+      <a href="index.html"><img src="img/logo.svg" class="logo" /></a>
       <nav>
         <li><a href="exhibitions.html">exhibitions</a></li>
         <li><a href="work.html">get involved</a></li>
@@ -23,69 +23,74 @@
         <li><a href="index.html">home</a></li>
       </nav>
     </header>
-    <section class="hero">
-      <img src="img/hero_blob.svg" class="hero_img" />
+
+    <div class="hero">
       <h1>Welcome</h1>
-      <p>to the Community Science Museum of Oslo</p>
-    </section>
-    <section class="welcome_content">
-      <div class="blob_exh_01">
-        <img src="img/blob.svg" alt="blob" class="image_01" />
-        <h2>Explore the cosmos</h2>
-        <p>
-          ‘The Sky Above Us’, explores the night sky and what we can see and
-          know about the universe around us. Follow the journey of our solar
-          exploration: from early Arab traders, to Galileo’s telescope, to the
-          latest exploration of the planets in our solar system.
-        </p>
-      </div>
-      <div class="blob_exh_02">
-        <img src="img/blob.svg" alt="blob" class="image" />
-        <div class="text">
-          <h2>The Origins</h2>
-          <p>
-            For centuries, philosophers and scientists have wrestled with the
-            question of our origins. Where do we come from and how did we get
-            here?
-          </p>
+      <p class="welcome_copy">
+        Come join us at the Community Science Museum where we’re committed to
+        making science accessible to all. Over the course of human history,
+        science has developed from our early understanding of fire, wind, water,
+        and earth to exploring everything from galaxies far away to the very
+        building blocks of life itself.
+      </p>
+    </div>
+
+    <div class="short-cuts">
+      <li><a href="#">exhibitions</a></li>
+      <li><a href="#">visit us</a></li>
+      <li><a href="#">get involved</a></li>
+    </div>
+
+    <div class="welcome_content">
+      <div class="container_left">
+        <img src="img/doll_cropped.jpg" alt="doll" class="image" />
+        <div class="overlay">
+          <div class="overlay_content">
+            <h2>Explore the cosmos</h2>
+            <p class="copy">
+              ‘The Sky Above Us’, explores the night sky and what we can see and
+              know about the universe around us. Follow the journey of our solar
+              exploration: from early Arab traders, to Galileo’s telescope, to
+              the latest exploration of the planets in our solar system.
+            </p>
+          </div>
         </div>
       </div>
-      <div class="blob_visit">
-        <img src="img/blob.svg" alt="blob" class="image" />
-        <h2>The Origins</h2>
-        <p>
-          For centuries, philosophers and scientists have wrestled with the
-          question of our origins. Where do we come from and how did we get
-          here?
-        </p>
+      <div class="container_right">
+        <img src="img/doll_cropped.jpg" alt="doll" class="image" />
+        <div class="overlay_left">
+          <div class="overlay_content">
+            <h2>Explore the cosmos</h2>
+            <p class="copy">
+              ‘The Sky Above Us’, explores the night sky and what we can see and
+              know about the universe around us. Follow the journey of our solar
+              exploration: from early Arab traders, to Galileo’s telescope, to
+              the latest exploration of the planets in our solar system.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="blob_work">
-        <img src="img/blob.svg" alt="blob" class="image" />
-        <h2>The Origins</h2>
-        <p>
-          For centuries, philosophers and scientists have wrestled with the
-          question of our origins. Where do we come from and how did we get
-          here?
-        </p>
+      <div class="container_left">
+        <img src="img/doll_cropped.jpg" alt="doll" class="image" />
+        <div class="overlay">
+          <div class="overlay_content">
+            <h2>Explore the cosmos</h2>
+            <p class="copy">
+              ‘The Sky Above Us’, explores the night sky and what we can see and
+              know about the universe around us. Follow the journey of our solar
+              exploration: from early Arab traders, to Galileo’s telescope, to
+              the latest exploration of the planets in our solar system.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="blob_volunteer">
-        <img src="img/blob.svg" alt="blob" class="image" />
-        <h2>The Origins</h2>
-        <p>
-          For centuries, philosophers and scientists have wrestled with the
-          question of our origins. Where do we come from and how did we get
-          here?
-        </p>
-      </div>
-    </section>
+    </div>
 
     <footer>
       <nav>
-        <li>Contact</li>
-
-        <li>Contact</li>
-        <li>Contact</li>
-        <li>Contact</li>
+        <li><a href="www.nrk.no"> Contact</a></li>
+        <li><a href="www.nrk.no"> Contact</a></li>
+        <li><a href="www.nrk.no"> Contact</a></li>
       </nav>
     </footer>
   </body>
